set up the products on sale

--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -14,7 +14,7 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <link href="{% static 'css/style.css' %}" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -24,7 +24,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home Alone</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
@@ -63,8 +63,43 @@
 
 
 {% for product in products %}
+{% if product.is_sale %}
+<!-- Products on Sale -->
                     <div class="col mb-5">
                         <div class="card h-100">
+                          <!-- Sale Badge -->
+                          <div class="badge bg-warning text-black position-absolute"
+                               style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">{{ product.name }}</h5>
+                  
+                                   <p> {{ product.description }}</p>
+                                    <!-- Product price-->
+                                    <strike>
+                                    ${{ product.price }}
+                                    </strike>
+                                    ${{ product.sale_price }}
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                            </div>
+                        </div>
+                    </div>
+{% else %}
+                    <!-- Products not on Sale -->
+
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                          <!-- Sale Badge -->
+                          <div class="badge bg-warning text-black position-absolute"
+                               style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
                             <!-- Product details-->
@@ -84,11 +119,10 @@
                             </div>
                         </div>
                     </div>
-
+{% endif %}
 {% endfor %}
 
 
-                </div>
             </div>
         </section>
         <!-- Footer-->
